# claude-driver

./: CLAUDE.md  README.md  main.py  orders.json  pyproject.toml
amazon/: extract_order.py  orders.json
core/: __init__.py  driver.py
docs/: 1-implementation_summary.md
sessions/: .gitkeep
sites/: __init__.py
sites/amazon/: README.md  append_orders.py  extract_order.py
sites/amazon/outputs/: amazon_orders_2024_formatted.csv  orders.json
sites/templates/: basic_extractor.py
tools/: __init__.py  extraction_validator.py  page_analyzer.py  selector_tester.py
