[project]
name = "claude-driver"
version = "1.0.0"
description = "Browser automation toolkit designed for AI-human collaboration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "beautifulsoup4>=4.12.0"
]
